# krecik

./: .gitignore  Cargo.toml  README.md  build.rs  krecik.sublime-project  rustfmt.toml
checks/on/tests/: test1.json  test10.json  test11.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
checks/tests/: test1.json  test10.json  test11.json  test12.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
src/: api.rs  config.rs  configuration.rs  krecik.rs  lib.rs  main.rs  tests.rs  travmole.rs  utilities.rs  web.rs
src/actors/: curl_generic_checker.rs  curl_multi_checker.rs  curl_multi_checker_pongo.rs  domain_expiry_checker.rs  generic_checker.rs  history_teacher.rs  mod.rs  multi_checker.rs  notificator.rs  results_warden.rs
src/checks/: check.rs  domain.rs  generic.rs  mod.rs  page.rs  pongo.rs  remote_mapper.rs  remote_pongo.rs
src/imgs/: krecik.eps
src/inputs/: check.rs  file.rs  mod.rs
src/mappers/: mod.rs  pongo.rs
src/products/: expected.rs  history.rs  mod.rs  story.rs  unexpected.rs
